--- a/public/index.html
+++ b/public/index.html
@@ -27,6 +27,6 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div style="width: 100%;" id="root"></div>
+    <div style="width: 100%" id="root"></div>
   </body>
 </html>
