--- a/public/index.html
+++ b/public/index.html
@@ -13,17 +13,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@400;700&family=Montserrat:wght@800&family=Raleway:wght@400;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Montserrat+Subrayada:wght@400;700&family=Montserrat:wght@800;700&family=Raleway:wght@400;600;700&display=swap"
       rel="stylesheet"
     />
     <title>Easy Learning</title>
-    <style>
-      :root {
-        --montserrat: "Montserrat", sans-serif;
-        --Subrayada: "Montserrat Subrayada", sans-serif;
-        --Raleway: "Raleway", sans-serif;
-      }
-    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
