--- a/public/index.html
+++ b/public/index.html
@@ -21,5 +21,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div style="width: 100%" id="root"></div>
+    <script src="https://kit.fontawesome.com/622cc589c6.js" crossorigin="anonymous"></script>
   </body>
 </html>
